<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LaunchPad</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="create_account">Create an Account</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="upcoming">Upcoming</string>
    <string name="history">History</string>
    <string name="post">Post</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="setting">Setting</string>
    <string name="searchbar_hint">Search</string>
    <string name="searchview_hint">Search Job, Company</string>
    <string name="description">Description</string>
    <string name="forget_password">Forget Password</string>
    <string name="got_account_sentence">Already have an account ?</string>
    <string name="no_account_sentence">You don\'t have an account yet?</string>
    <string name="password_and_security">Password and security</string>
    <string name="personal_information">Personal information</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_1">Sign Up</string>
    <string name="sign_up_2">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="logout">Logout</string>
    <array name="job_position">
        <item>Director</item>
        <item>Manager</item>
        <item>Senior</item>
        <item>Junior</item>
    </array>
    <array name="job_type">
        <item>Full Time</item>
        <item>Part Time</item>
        <item>Contract</item>
        <item>Temporary</item>
        <item>Internship</item>
        <item>Volunteer</item>
    </array>
    <array name="workplace">
        <item>Remote</item>
        <item>On Site</item>
        <item>Hybrid</item>
    </array>
    <array name="qualification">
        <item>Doctor of Philosophy</item>
        <item>Master Degree</item>
        <item>Bachelor Degree</item>
        <item>Diploma</item>
        <item>Foundation / SPTM or equivalent</item>
        <item>SPM or equivalent</item>
        <item>None</item>
    </array>
    <string name="salary_prefix">RM </string>
    <string name="salary_suffix">.00</string>
    <string name="experience_suffix">year(s)</string>
    <string name="edit">Edit</string>
    <string name="archive">Archive</string>
    <string name="morning">Good Morning,</string>
    <string name="recent_job_list">Recent Job List</string>
    <string name="job_details">Job Details</string>
    <string name="company">Company</string>
    <string name="APPLY_NOW">APPLY NOW</string>
    <string name="VIEW_APPLICANT">VIEW APPLICANT</string>
    <string name="post_job">Post Job</string>
    <string name="edit_job">Edit Job</string>
    <string name="job_name">Job Name</string>
    <string name="position">Position</string>
    <string name="job_type">Job Type</string>
    <string name="workplace">Workplace</string>
    <string name="min_salary">Min Salary</string>
    <string name="max_salary">Max Salary</string>
    <string name="qualification">Qualification</string>
    <string name="experience">Experience</string>
    <string name="requirement">Requirement</string>
    <string name="required">* Required</string>
    <string name="optional">* Optional</string>
    <string name="POST">POST</string>
    <string name="EDIT">EDIT</string>
    <string name="SAVE">SAVE</string>
    <string name="resume">Resume</string>
    <string name="resume_hint">Be sure to include an updated resume with PDF*</string>
    <string name="Upload_Resume">Upload Resume</string>
    <string name="information">Information</string>
    <string name="apply_job_hint">* Your profile information will be sent to the company.</string>
    <string name="SUBMIT">SUBMIT</string>
    <string name="salary">Salary</string>
    <string name="about_company">About Company</string>
    <string name="location">Location</string>
    <string name="since">Since</string>
    <string name="applicants">Applicants</string>
    <string name="txt_new">New</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="no_accept_applicant">You have not accepted any job seekers yet.</string>
    <string name="no_reject_applicant">You are kind as you have not rejected any job seeker.</string>
    <string name="no_applicant">Oops! Your job does not have any applicants yet.</string>
    <string name="review_applicants">Review Applicants</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="message">Message</string>
    <string name="education">Education</string>
    <string name="view_profile">View Profile</string>
    <string name="basic_info">Basic Info</string>
    <string name="your_posted_job">Your Posted Job</string>
    <string name="messages">Messages</string>
    <string name="forgot_password_desc">To reset your password, please enter your email.</string>
    <string name="slogan">Navigate the stars, in the job-seeking sea, Let LaunchPad guide you, to where you\'re meant to be.</string>
    <string name="select_image">Select Image</string>
    <string name="my_profile">My Profile</string>
    <string name="job">Job</string>
    <string name="community">Community</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="saved_job">Saved Job</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="interview">Interview</string>
    <string name="pending">Pending</string>
    <string name="schedule_interview">Schedule Interview</string>
    <string name="save">SAVE</string>
    <string name="Archived">Archived</string>
    <string name="Director">Director</string>
    <string name="Manager">Manager</string>
    <string name="Senior">Senior</string>
    <string name="Junior">Junior</string>
    <string name="FullTime">Full Time</string>
    <string name="PartTime">Part Time</string>
    <string name="Contract">Contract</string>
    <string name="Temporary">Temporary</string>
    <string name="Internship">Internship</string>
    <string name="Volunteer">Volunteer</string>
    <string name="Remote">Remote</string>
    <string name="OnSite">On Site</string>
    <string name="Hybrid">Hybrid</string>
    <string name="ArchivedJob">Archived Job</string>
    <string name="client_id">402844892969-50v2vgn16snkr157l2jpdrao6m7l958g.apps.googleusercontent.com</string>
    <string name="exception_error_msg">Something Went Wrong! Please Try Again.</string>
    <string name="password_helper_text">Password should be at least 8 characters long with alphabets and digits.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slogon_enterprise">Create an enterprise account to recruit talents in your company.</string>
    <string name="launchpad_enterprise">LaunchPad Enterprise</string>
    <string name="company_name">Company Name</string>
    <string name="mapbox_access_token" translatable="false" tools:ignore="UnusedResources">pk.eyJ1Ijoieml5YW4wMyIsImEiOiJjbHZqNHNoaTExaG44MmluMHc1dW9vM2lrIn0.iM0K_pB7iqUThlUTUu-UTg</string>
    <string name="founded_in_year">Founded in Year</string>
    <string name="GoodMorning">Good Morning,</string>
    <string name="GoodAfternoon">Good Afternoon,</string>
    <string name="GoodEvening">Good Evening,</string>
    <string name="TimeToSleep">Time To Sleep,</string>
    <string name="no_save_job">You do not save any job.</string>
    <string name="no_archived_job">You do not archive any job.</string>
    <string name="done">Done</string>
    <string name="update">Update</string>
    <string name="register_your_company">Register Your Company</string>
    <string name="dialog_company_not_register">Please complete your company profile to access full features!</string>
    <string name="remind_me_later">Remind Me Later</string>
    <string name="register_now">Register Now</string>
    <string name="delete">Delete</string>
    <string name="you_haven_t_apply_any_job_yet">You haven\'t apply any job yet.</string>
    <string name="click_to_view_this_resume">Click to view this resume.</string>
    <string name="please_verify_your_email">Please Verify Your Email.</string>
    <string name="change_password_confirmation">Are you sure to change password? You will be logging out to re-login your account.</string>
</resources>